--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,4 +55,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.12.0'
 
+    //dependency
+    implementation 'org.kodein.di:kodein-di-framework-android-x:7.0.0'
+
 }
