--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.ItemActivity"></activity>
+        <activity android:name=".ui.ItemActivity" />
         <activity android:name=".ui.PostActivity" />
         <activity android:name=".ui.MainActivity">
             <intent-filter>
